--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,14 @@
+html {
+	position: relative;
+	min-height: 100%;
+}
 body {
 	color: #777777;
 	font-size: 16px;
 	line-height: 1.5;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	background: #ededed url('../images/gray_jean.png') repeat left top;
+	margin: 0 0 125px;
 }
 .site-header {
 	background-color: #fff;
@@ -12,12 +17,13 @@ body {
 }
 .logo {
 	color: #fff;
-	padding: 30px 40px;
+	padding: 35px 35px;
 	display: inline-block;
 	background-color: #4aaaa5;
 }
 .logo h1 {
 	color: #fff;
+	margin: 0;
 	font-weight: bold;
 	font-size: 36px;
 }
@@ -27,17 +33,16 @@ body {
 }
 .main-navigation li {
 	display: inline-block;
-	padding-right: 10px;
-	padding-left: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
 	border-right: solid 1px #ddd;
 }
 .main-navigation li:last-child {
 	border-right: none;
 }
 .main-navigation li a {
-	color: #ddd;
+	color: #777;
 	text-decoration: none;
-	text-transform: uppercase;
 	display: block;
 }
 h1,h2,h3,h4,h5,h6 {
@@ -46,6 +51,14 @@ h1,h2,h3,h4,h5,h6 {
 	font-weight: bold;
 	font-size: 24px;
 	font-family: 'Georgia', Times, 'Times New Roman', serif;
+	margin-bottom: 30px;
+}
+p {
+	margin-bottom: 15px;
+}
+.header-border {
+	padding-bottom: 35px;
+	border-bottom: solid 3px #ededed;
 }
 .container {
 	width: 960px;
@@ -71,16 +84,22 @@ h1,h2,h3,h4,h5,h6 {
 }
 .img-left {
 	float: left;
-	margin-right: 20px;
-	margin-bottom: 20px;
+	margin-right: 25px;
+	margin-bottom: 6px;
 }
 .site-footer {
 	color: #ccc;
 	font-size: 12px;
 	text-align: center;
-	padding-top: 30px;
-	padding-bottom: 30px;
 	margin-top: 40px;
 	border-top: solid 8px #4aaaa5;
 	background-color: #666;
+	position: absolute;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100px;
+}
+.copyright {
+	padding-top: 40px;
 }
