--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,6 @@ body {
 .logo h1 {
 	color: #fff;
 	margin: 0;
-	font-weight: bold;
-	font-size: 36px;
 }
 .main-navigation {
 	margin-top: 35px;
@@ -49,16 +47,38 @@ h1,h2,h3,h4,h5,h6 {
 	color: #4aaaa5;
 	line-height: 1;
 	font-weight: bold;
-	font-size: 24px;
 	font-family: 'Georgia', Times, 'Times New Roman', serif;
-	margin-bottom: 30px;
+}
+h1 {
+	font-size: 36px;
+}
+h2 {
+	font-size: 32px;
+}
+h3 {
+	font-size: 28px;
+}
+h4 {
+	font-size: 24px;
+}
+h5 {
+	font-size: 20px;
+}
+h6 {
+	font-size: 18px;
 }
 p {
 	margin-bottom: 15px;
 }
-.header-border {
+.page-header {
 	padding-bottom: 35px;
+	margin-bottom: 30px;
 	border-bottom: solid 3px #ededed;
+}
+.sub-header {
+	padding-bottom: 25px;
+	margin-bottom: 25px;
+	border-bottom: solid 1px #ededed;
 }
 .container {
 	width: 960px;
@@ -82,6 +102,13 @@ p {
 	padding: 40px 30px;
 	border: solid 1px #ddd;
 }
+.social-links li {
+	margin-right: 4px;
+	display: inline-block;
+}
+.social-links li a {
+	display: block;
+}
 .img-left {
 	float: left;
 	margin-right: 25px;
@@ -96,7 +123,7 @@ p {
 	background-color: #666;
 	position: absolute;
 	left: 0;
-	right: 0;
+	bottom: 0;
 	width: 100%;
 	height: 100px;
 }
