--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
 	#Layout
 \*------------------------------------*/
 
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
 html {
 	position: relative;
 	min-height: 100%;
@@ -134,6 +139,30 @@ p {
 }
 
 /*------------------------------------*\
+	#Portfolio
+\*------------------------------------*/
+
+.portfolio-items {
+	overflow: hidden;
+}
+.portfolio-item {
+	float: left;
+	width: 50%;
+	position: relative;
+	margin-bottom: 20px;
+}
+.portfolio-item .portfolio-title {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 20px;
+	color: #fff;
+	padding: 10px;
+	text-align: center;
+	background: #4aaaa5;
+}
+
+/*------------------------------------*\
 	#Misc Classes
 \*------------------------------------*/
 
@@ -160,25 +189,26 @@ p {
 	#Forms
 \*------------------------------------*/
 
+.form-group {
+	margin-bottom: 10px;
+}
+.form-group label {
+	font-weight: bold;
+	display: block;
+	margin-bottom: 5px;
+}
 button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
+	color: #fff;
 	display: inline-block;
-	margin-bottom: 0;
-	font-weight: normal;
 	text-align: center;
 	vertical-align: middle;
 	cursor: pointer;
 	border: 1px solid #ccc;
-	white-space: nowrap;
-	padding: 6px 12px;
-	font-size: 14px;
-	line-height: 1.42857143;
-	border-radius: 4px;
-	color: #333;
-	background-color: #fff;
-	text-shadow: 0 1px 0 #fff;
+	padding: 10px 20px;
+	background-color: #4aaaa5;
 }
 
 button:hover,
@@ -199,13 +229,12 @@ input[type="reset"]:active,
 input[type="submit"]:active {
 	border-color: #adadad;
 	background-color: #e0e0e0;
-	background-position: 0 -15px;
 }
 
 input[type="text"],
 input[type="email"],
 textarea {
-	color: #F3F3F3;
+	/*color: #F3F3F3;*/
 	vertical-align: middle;
 	border: 2px solid #F3F3F3;
 	background-color: #fff;
