--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ html {
 	min-height: 100%;
 }
 body {
-	color: #777777;
+	color: #777;
 	font-size: 16px;
 	line-height: 1.5;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -25,20 +25,25 @@ body {
 	margin-bottom: 40px;
 }
 .logo {
-	color: #fff;
-	padding: 35px 35px;
 	display: inline-block;
-	background-color: #4aaaa5;
 }
-.logo h1 {
+.logo a {
 	color: #fff;
-	margin: 0;
+	display: block;
+	text-decoration: none;
+	padding: 35px 35px;
+	background-color: #4aaaa5;
+	transition: all 0.5s ease;
+}
+.logo a:hover {
+	color: #4aaaa5;
+	background-color: #ccc;
 }
 .container {
 	width: 960px;
 	margin-left: auto;
 	margin-right: auto;
-	overflow: hidden;
+	overflow: auto;
 }
 .main-navigation {
 	margin-top: 35px;
@@ -57,6 +62,9 @@ body {
 	color: #777;
 	text-decoration: none;
 	display: block;
+}
+.main-navigation li a:hover {
+	color: #4aaaa5;
 }
 .main-section,
 .aside-section {
@@ -122,6 +130,10 @@ h6 {
 p {
 	margin-bottom: 15px;
 }
+img {
+	height: auto;
+	max-width: 100%;
+}
 
 /*------------------------------------*\
 	#Headings
@@ -142,23 +154,26 @@ p {
 	#Portfolio
 \*------------------------------------*/
 
-.portfolio-items {
-	overflow: hidden;
-}
-.portfolio-item {
+.portfolio-items .portfolio-item {
 	float: left;
-	width: 50%;
+	width: 274px;
 	position: relative;
 	margin-bottom: 20px;
+	margin-right: 40px;
+}
+.portfolio-items .portfolio-item:nth-child(even) {
+	margin-right: 0;
 }
 .portfolio-item .portfolio-title {
+	color: #fff;
+	font-size: 18px;
+	font-family: 'Georgia', Times, 'Times New Roman', serif;
+	text-align: center;
 	position: absolute;
 	left: 0;
 	right: 0;
 	bottom: 20px;
-	color: #fff;
 	padding: 10px;
-	text-align: center;
 	background: #4aaaa5;
 }
 
@@ -169,9 +184,13 @@ p {
 .img-left {
 	float: left;
 	margin-right: 25px;
-	margin-bottom: 6px;
+	margin-bottom: 10px;
 }
-
+.clearfix:after {
+	content: "";
+	display: table;
+	clear: both;
+}
 
 /*------------------------------------*\
 	#List
@@ -183,6 +202,10 @@ p {
 }
 .social-links li a {
 	display: block;
+	transition: all 0.5s ease;
+}
+.social-links li a:hover {
+	opacity: .60;
 }
 
 /*------------------------------------*\
@@ -206,7 +229,7 @@ input[type="submit"] {
 	text-align: center;
 	vertical-align: middle;
 	cursor: pointer;
-	border: 1px solid #ccc;
+	border: 1px solid #ededed;
 	padding: 10px 20px;
 	background-color: #4aaaa5;
 }
@@ -215,8 +238,7 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-	border-color: #adadad;
-	background-color: #e0e0e0;
+	background-color: #4aa89d;
 }
 
 button:focus,
@@ -227,24 +249,23 @@ button:active,
 input[type="button"]:active,
 input[type="reset"]:active,
 input[type="submit"]:active {
-	border-color: #adadad;
-	background-color: #e0e0e0;
+	background-color: #4aa89d;
 }
 
 input[type="text"],
 input[type="email"],
 textarea {
-	/*color: #F3F3F3;*/
+	color: #a9a9a9;
 	vertical-align: middle;
-	border: 2px solid #F3F3F3;
+	border: 2px solid #ddd;
 	background-color: #fff;
 }
 
 input[type="text"]:focus,
 input[type="email"]:focus,
 textarea:focus {
-	color: #111;
-	border-color: #66afe9;
+	color: #777;
+	border-color: #4aaaa5;
 	outline: 0;
 }
 
@@ -253,45 +274,4 @@ input[type="email"],
 textarea {
 	padding: 10px 15px;
 	width: 100%;
-}
-
-/*------------------------------------*\
-	#Buttons
-\*------------------------------------*/
-
-.btn {
-	border-radius: 0;
-}
-.btn-transparent {
-	color: #fff;
-	background-color: transparent;
-	border-color: #fff;
-}
-.btn-transparent:hover,
-.btn-transparent:focus  {
-	color: #fff;
-	background-color: #98ca3c;
-	border-color: #000;
-}
-.btn-transparent:active,
-.btn-transparent:active:hover,
-.btn-transparent:active:focus {
-	color: #fff;
-	background-color: transparent;
-	border-color: #fff;
-}
-.btn-success {
-	background-color: #76b54a;
-	border-color: #6AA343;
-}
-.btn-success:hover,
-.btn-success:focus {
-	background-color: #449d44;
-	border-color: #398439;
-}
-.btn-success:active
-.btn-success:active:hover,
-.btn-success:active:focus {
-	background-color: #398439;
-	border-color: #255625;
 }
