--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ body {
 	width: 960px;
 	margin-left: auto;
 	margin-right: auto;
-	overflow: auto;
+	overflow: hidden;
 }
 .main-navigation {
 	margin-top: 35px;
@@ -134,6 +134,16 @@ img {
 	height: auto;
 	max-width: 100%;
 }
+a {
+	color: #4aaaa5;
+}
+a:hover,
+a:focus {
+	color: #000;
+}
+a:active {
+	color: #4aaaa5;
+}
 
 /*------------------------------------*\
 	#Headings
@@ -160,6 +170,7 @@ img {
 	position: relative;
 	margin-bottom: 20px;
 	margin-right: 40px;
+	overflow: hidden;
 }
 .portfolio-items .portfolio-item:nth-child(even) {
 	margin-right: 0;
@@ -175,6 +186,25 @@ img {
 	bottom: 20px;
 	padding: 10px;
 	background: #4aaaa5;
+}
+.portfolio-item:hover .portfolio-title {
+	color: #000;
+}
+.portfolio-item a {
+	display: block;
+	border-width: 1px;
+	border-color: #ddd;
+	border-style: solid;
+}
+.portfolio-item a:hover {
+	border-color: #4aaaa5;
+}
+.portfolio-item img {
+	display: block;
+	transition: all 0.5s ease;
+}
+.portfolio-item:hover img {
+	transform: scale( 1.1 );
 }
 
 /*------------------------------------*\
@@ -233,14 +263,12 @@ input[type="submit"] {
 	padding: 10px 20px;
 	background-color: #4aaaa5;
 }
-
 button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
 	background-color: #4aa89d;
 }
-
 button:focus,
 input[type="button"]:focus,
 input[type="reset"]:focus,
@@ -251,7 +279,6 @@ input[type="reset"]:active,
 input[type="submit"]:active {
 	background-color: #4aa89d;
 }
-
 input[type="text"],
 input[type="email"],
 textarea {
@@ -260,7 +287,6 @@ textarea {
 	border: 2px solid #ddd;
 	background-color: #fff;
 }
-
 input[type="text"]:focus,
 input[type="email"]:focus,
 textarea:focus {
@@ -268,7 +294,6 @@ textarea:focus {
 	border-color: #4aaaa5;
 	outline: 0;
 }
-
 input[type="text"],
 input[type="email"],
 textarea {
