--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+html,
+body {
+	min-width: 960px;
+}
 html {
 	position: relative;
 	min-height: 100%;
